--- a/css/style.css
+++ b/css/style.css
@@ -34,13 +34,13 @@
 }
 
 .my-drop-zone { 
-	border: dotted 3px lightgray; 
+	border: dotted 3px #D0D0D0 !important; 
 }
 .nv-file-over { 
-	border: dotted 3px red; 
+	border: dotted 3px red  !important; 
 } 
 .another-file-over-class { 
-	border: dotted 3px green; 
+	border: dotted 3px green  !important; 
 }
 
 .delete{
